# pspin

./: .bzrignore  .gitignore  CMakeLists.txt  TASKS  bootstrap.sh  thesis.doc
articles/: .gitignore  CMakeLists.txt  article.doc  hpc.tex  paco-article.tex  paco-slides.tex  paco-thesis.tex  phd-abstract-eng.tex  phd-abstract-review.tex  phd-abstract.tex  phd-proposals.tex  report1-slides.odp  report1.tex  report2-slides.tex  report2.tex  report3-slides.tex  report3.tex  review.tex  slides.sty  state-partition.dia
articles/swsys/: article.doc  article.odt  authors.doc
articles/technomag/: bpm2.cls  technomag-article.tex  techomag-article.tex
articles/technomag/doc/: abstract-keywords-korotkov-kri.doc  abstract.doc  authors-korotkov-kri.doc  keywords.doc
articles/technomag/korotkov-kri/: NiOMGTU.sty  korotkov-kri.tex
articles/technomag/korotkov-kri/doc/: abstract.odt  keywords.odt
cmake/: FindCtags.cmake  FindDia.cmake  FindDoxygen.cmake  FindInkscape.cmake  FindPlotutils.cmake  PCHSupport.cmake  PkgConfigUtil.cmake  TargetDistclean.cmake  UseGnuplot.cmake
data/: briefstat.py  parse-log.py  promela-grammar.tex  state-partition.py  stategen-speed.py  states-speed-pspin.py  states-speed-spin.py
data/experiments/: state_count.txt
data/inc/: election.pml  par-state-space-bfs.code  par-state-space-dfs.code  parstatespacebfs.code  parstatespacedfs.code  promela-grammar.pyg  stategen-speed.tex  tstatement.py
data/plots/: .gitignore  CMakeLists.txt  mpi.plot  state-partition1-horz.plot  state-partition1-horz2.plot  state-partition1.plot  state-partition2.plot  states-speed.plot
doc/: article.doc  idef0-codegen.dia  ikorotkov-itas-article.doc  ikorotkov-itas-authors.doc
doc/Model-checking/: Addison Wesley - Spin Model Checker Primer And Reference Manual[2003].chm
graphics/: CMakeLists.txt  bitstate.dia  components.dia  distr-generation-2.dia  distr-generation.dia  distr-storage.dia  distr-termination.dia  exp-idef0.dia  fullstate-slides.dia  fullstate.dia  idef0-codegen.dia  idef0-verification.dia  make-hash-table-figure.py  modelchk-idef0-a0.dia  modelchk-idef0-a1-1.dia  modelchk-idef0-a1.dia  modelchk-idef0-slides.dia  modelchk-idef0-tlcd.dia  mpi-async-seq.pic  mpi-deploy-horz.dia  mpi-deploy.dia  mpi-messages.dia  mpi-send-flowchart-horz.dia  mpi-send-flowchart.dia  philo-kripke.dia  philo-mealey.dia  pmlparse-classes.dia  pmlparse-inner.dia  state-partition-slides.dia  state-partition.dia  state-representation.dia  stategen-components-slides.dia  stategen-components.dia  stategen-idef-b1.dia  stategen-idef0-b0.dia  stategen-idef0-b1.dia  stategen-idef0-simple.dia  statgen-idef-b0.dia  termination-dijkstra.dia  termination-naive.dia  (+1 more)
graphics/inc/: sequence.pic
graphics/plots/: .gitignore  CMakeLists.txt  mpi.plot
literature/Model-checking/: MCST.odp  intel-uclid.odp
literature/Time-logics/: etaps01.talk.ps
report/tex/: G2-105.sty  abbrev.tex  abstract.tex  analogues.tex  biblio.tex  conclusion.tex  goals.tex  intro.tex  lib.tex  parallel.tex  preamble.tex  report.tex  sequential.tex
src/: .gitignore  count-loc.sh
src/pmlparse/: codegen.py  expression.py  oddeven.pml  oddeven2.pml  pan.pre  peterson3.pml  philo6.pml  philo7.pml  pmlparse.py  process.py  promela.pyg  promela.pyl  run_tests.sh  statement.py  t_expression.py  t_statement.py  utils.py  variable.py
src/pmlparse/pyggy_priv/: errors.py  glr.py  helpers.py  lexer.py  pyggy.py
src/pspin/: CMakeLists.txt  Makefile  Makefile.bare  Makefile.simple  bfs.c  bfs.h  bfs_fullstate.h  bfs_questate.h  bspin-test.sh  channel.h  config.h  debug.h  experiments  mpi_async.c  mpi_async.h  mpi_debug.c  mpi_tags.h  murmur_hash.h  oddeven.pml  paremu.c  parmpi.c  peterson3.pml  philo.pml  pspin.job  run-local.sh  run-model.sh  run-mpi.sh  set-model.sh  spin-test.sh  state.c  state.h  state_hash.c  state_hash.h
src/pspin/models/: atomtest.pml  cambridge.pml  ccodetest.pml  chantest.pml  dsteptest.pml  election.pml  election2.pml  hiddentest.pml  minimize.pml  peterson.pml  petri1.pml  petri2.pml  philo.pml  scheduler.pml  sliding-window.pml  typetest.pml
src/pspin/tools/: copy-from-mpi.sh  copy-to-mpi.sh  parse-log.py  process-results.sh  run-mpi-job.sh
test/: .gitignore
test/mpi/: Makefile  test1.c  test_async.c  test_async_many.c  test_io  test_io.c
test/spin/: .gitignore  Makefile  check1.pml  fact.pml  fib.pml  fib2.pml  hyman0.pml  lynch.pml  oddeven.pml  peterson3.pml  rip.pml  rip1.pml  rip2.pml  tsp.pml
thesis/: .gitignore  00-abstract.tex  01-lib.tex  01-preamble.tex  10-abbrev.tex  11-intro.tex  12-goals.tex  20-model-checking.tex  20-modelchecking.tex  21-analogues.tex  22-sequential.tex  31-parallel.tex  32-statestore.tex  41-communication.tex  41-paremu.tex  42-codegen.tex  42-parmpi.tex  43-statestore.tex  44-codegen.tex  55-experim.tex  80-promela-grammar.tex  81-pmlparse-classes.tex  82-experim-models.tex  90-conclusion.tex  99-biblio.tex  CMakeLists.txt  G2-105.sty  Makefile  thesis.bib  thesis.tex  trash.tex  verification.bib
thesis/tex/: 01-preamble.tex  11-intro.tex  12-goals.tex  21-analogues.tex  22-sequential.tex  31-parallel.tex  41-paremu.tex  42-parmpi.tex  42-present.tex  43-statestore.tex  44-codegen.tex  G7-32.cls  Makefile  abbrev.tex  analogues.tex  biblio.tex  conclusion.tex  goals.tex  intro.tex  lib.tex  main.tex  parallel.tex  paremu.tex  preamble.tex  sequential.tex
